# agentic-ai-samples

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  verify.ipynb
agents/llm-direct/: propmpt-chaining.ipynb
